add an offical route for downloads
